--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:testdb 
-spring.datasource.username=sa 
-spring.datasource.password= 
- 
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring 
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto:none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
