Implementando SmtpServer. Padroes Strategy e Template Method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=rodrigo.fasioli@gmail.com
+default.sender=pink.bubbles.go.away@gmail.com
 default.recipient=rodrigo.fasioli@gmail.com
