--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=pink.bubbles.go.away@gmail.com
 default.recipient=rodrigo.fasioli@gmail.com
+
+jwt.secret=53Equ3c14_d3_C4r4c73R3&_94r4_4&&1n4R_70#3n!
+jwt.expiration=60000
